--- a/package.json
+++ b/package.json
@@ -63,7 +63,14 @@
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
     "@types/shopify-buy": "^2.10.5",
+    "babel-eslint": "^10.1.0",
     "deepmerge": "^4.2.2",
+    "eslint": "^7.25.0",
+    "eslint-config-kentcdodds": "^18.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "graphql": "^15.4.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
